# Music-Visualizer

./: .clang-format  .gitignore  CMakeLists.txt  CONFIG_EXAMPLE.md  Makefile  autocmake.sh  build.sh  build_linux.sh  debwsl  debwsl.pub  default.profraw  fetch_win_resources.sh  fetchresources.sh  fftplayer  format.py  gmon.out  libcopy.sh  linux_build_clang.sh  linux_build_gcc.sh  linux_static_build.sh  meson.build  perfcov.json  prep.sh  quick_compile_linux_libs.sh  readme.md  report.txt  run.sh  unix_build.sh  win64_make.sh
.cache/clangd/index/: audio.cpp.685AAE571BC6D9D7.idx  audio.hpp.5D86AC44A11A2749.idx  audio_data.cpp.CF08ECC4A1428C80.idx  audio_def.h.E5577EE1D23748B8.idx  events.c.7ABF50463657C449.idx  events.hpp.9877543F862892D1.idx  fft.cpp.06B4214F75860148.idx  fft.hpp.345591755324E40A.idx  file_def.hpp.60B9DCCB140DE432.idx  files.cpp.58BF3259D0BEF999.idx  files.hpp.7697F17541D878B7.idx  filesystem.c.AB1EE3925E0570AA.idx  filesystem.h.8FB30078F6ACE730.idx  font_def.hpp.52B654967BC2D3D0.idx  font_entity.hpp.C0C1D4C35AB3602A.idx  font_render_draw.cpp.555762EDA016E343.idx  font_render_set.cpp.7E40195651D68075.idx  fontdef.h.04EAF87FE2A27081.idx  fonts.cpp.49B797A92F19AC30.idx  fonts_create.c.0DDFB254E5D89E8B.idx  freq_render_draw.cpp.01F2FBE766F4C1B5.idx  internal.cpp.36D295622B63C2FF.idx  key_events.cpp.99469DFFCD51C321.idx  macdefs.hpp.1478D3A622696ACD.idx  main.c.25F813A95B698C9B.idx  main.cpp.B3C6C6C4D18AD2CB.idx  main.h.90662D0321B2E1F4.idx  paths.cpp.F866A9619C62B879.idx  program_path.hpp.65F984ED67159C38.idx  render.cpp.007F12BA93983357.idx  render_draw_text.c.7735393032619930.idx  render_entity.hpp.CE4E23DF7D73B372.idx  renderer_window.c.C7EC3905DF0E5D28.idx  sdl2_entity.hpp.3ED993CE43CFDBD9.idx  table.c.DF6D5C9197759CE3.idx  table.h.CE4AF5AF85ABFF9F.idx  theme.cpp.4BA35C1F7F35B03D.idx  theme.hpp.58392B6FF7660D3A.idx  userdata_def.h.D353A3A47AFA2884.idx  utils.c.67BB2A4D1D217746.idx  (+2 more)
LICENSES/: Roboto.txt  libsndfile_license.md
LIN/: .gitignore  Makefile  perf.sh
LIN/inc/: audio.h  font.h  init.h  macro.h  music_visualizer.h  types.h
LIN/src/: audio.c  fft.c  files.c  font.c  init.c  inputs.c  main.c  menu.c  render.c  state.c  workers.c
WIN/: Makefile
WIN/inc/: audio.h  init.h  macro.h
WIN/resources/libsndfile/lib/: libsndfile.la  libsndfile.lai  lt-test_main.c  test_main_ltshwrapper
WIN/resources/x86_64-w64-mingw32/include/: afunix.h  agtctl_i.c  agtsvr_i.c  asyncinfo.h  bdaiface_enums.h  bits2_5.h  bits3_0.h  bits5_0.h  cdoex_i.c  cdoexm_i.c  cdosys_i.c  color.dlg  commctrl.rh  common.ver  computecore.h  computedefs.h  computenetwork.h  computestorage.h  concurrencysal.h  corecrt.h  corecrt_startup.h  corecrt_stdio_config.h  corecrt_wstdlib.h  d3d10sdklayers.h  d3d11_2.h  d3d11_3.h  d3d11_4.h  d3d11on12.h  d3d12.h  d3d12sdklayers.h  d3d12shader.h  d3dvec.inl  d3dx9math.inl  dcomp.h  dcompanimation.h  dcomptypes.h  dde.rh  dinputd.h  directmanipulation.h  directxmath.h  (+101 more)
WIN/resources/x86_64-w64-mingw32/include/GL/: wgl.h
WIN/resources/x86_64-w64-mingw32/include/KHR/: khrplatform.h
WIN/resources/x86_64-w64-mingw32/include/ddk/: ata.h  ntintsafe.h  wdmsec.h
WIN/resources/x86_64-w64-mingw32/include/wrl/: client.h  internal.h  module.h
WIN/resources/x86_64-w64-mingw32/include/wrl/wrappers/: corewrappers.h
WIN/resources/x86_64-w64-mingw32/lib/ldscripts/: i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xe  i386pep.xn  i386pep.xr  i386pep.xu
WIN/src/: audio.c  files.c  font.c  init.c  main.c  menu.c  state.c
assets/: .settings_icon.png-autosave.kra  music_icon.png~  settings_icon.png~
inc/: audio.h  audiodefs.h  events.h  filesysdefs.h  filesystem.h  font.h  fontdef.h  graphics.h  init.h  input.h  macdef.h  macro.h  main.h  music_visualizer.h  render.h  renderer.h  sys.h  table.h  themes.h  threads.h  types.h  utils.h  window.h
include/: audio.hpp  audio_def.h  audiodefs.hpp  defines.hpp  enumdefs.hpp  events.hpp  fft.hpp  file_def.hpp  filedefs.hpp  files.hpp  font_def.hpp  font_entity.h  font_entity.hpp  fontdefs.hpp  fonts.hpp  globals.hpp  internal.hpp  macdefs.hpp  mouse.hpp  particles.hpp  paths.hpp  program_path.hpp  render_entity.h  render_entity.hpp  renderdefs.hpp  rendering.hpp  sdl2_audio.hpp  sdl2_entity.hpp  sdl2defs.hpp  structdef.h  switch.hpp  table.hpp  theme.hpp  threads.hpp  userdata_def.h  utils.hpp  window.hpp  window_entity.h  window_entity.hpp
lua/: config.lua
src/: #audio.c#  audio.c  audio.cpp  audio.h  audio_callback.c  audio_data.cpp  audio_read.c  audio_read.cpp  audiodefs.h  events.c  events.h  fft.c  fft.cpp  files.c  files.cpp  files_lin.c  filesysdefs.h  filesystem.c  filesystem.h  font.c  font.h  font_render_draw.cpp  font_render_set.cpp  fontdef.h  fonts.c  fonts.cpp  fonts_create.c  freq_render_draw.cpp  graphics.c  init.c  init.h  inputs.c  instantiate.c  interactions.c  internal.cpp  key_events.cpp  key_inputs.c  macro.h  main.c  main.cpp  (+45 more)
